* eol style property in main branch fixed
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@19 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -1083,6 +1083,8 @@ install/doc/faq.txt svn_eol_002dstyle=native
 install/doc/readme.txt svn_eol_002dstyle=native
 install/doc/whatsnew.txt svn_eol_002dstyle=native
 install/macosx/fpc-1.9.8.pmsp svn_mime_002dtype=application%2Foctet-stream
+install/macosx/resources/License.txt svn_eol_002dstyle=native
+install/macosx/resources/ReadMe.txt svn_eol_002dstyle=native
 installer/Makefile.fpc svn_eol_002dstyle=native
 installer/install.pas svn_eol_002dstyle=native
 installer/makelink.pas svn_eol_002dstyle=native
@@ -2690,6 +2692,7 @@ packages/extra/winunits/activex.pp svn_eol_002dstyle=native
 packages/extra/winunits/commctrl.pp svn_eol_002dstyle=native
 packages/extra/winunits/comobj.pp svn_eol_002dstyle=native
 packages/extra/winunits/examples/testver.pp svn_eol_002dstyle=native
+packages/extra/winunits/jedi.inc svn_eol_002dstyle=native
 packages/extra/winunits/jediapilib.inc svn_eol_002dstyle=native
 packages/extra/winunits/jwaObjsel.pas svn_eol_002dstyle=native
 packages/extra/winunits/jwaaccctrl.pas svn_eol_002dstyle=native
@@ -3683,6 +3686,7 @@ rtl/win32/graph.pp svn_eol_002dstyle=native
 rtl/win32/initc.pp svn_eol_002dstyle=native
 rtl/win32/keyboard.pp svn_eol_002dstyle=native
 rtl/win32/messages.pp svn_eol_002dstyle=native
+rtl/win32/mouse.pp svn_eol_002dstyle=native
 rtl/win32/objinc.inc svn_eol_002dstyle=native
 rtl/win32/printer.pp svn_eol_002dstyle=native
 rtl/win32/signals.pp svn_eol_002dstyle=native
@@ -5098,7 +5102,7 @@ tests/webtbs/tw1445.pp svn_eol_002dstyle=native
 tests/webtbs/tw1450.pp svn_eol_002dstyle=native
 tests/webtbs/tw1451.pp svn_eol_002dstyle=native
 tests/webtbs/tw1470.pp svn_eol_002dstyle=native
-tests/webtbs/tw1472.pp svn_mime_002dtype=application%2Foctet-stream
+tests/webtbs/tw1472.pp svn_eol_002dstyle=native
 tests/webtbs/tw1477.pp svn_eol_002dstyle=native
 tests/webtbs/tw1479.pp svn_eol_002dstyle=native
 tests/webtbs/tw1485.pp svn_eol_002dstyle=native
