--- a/.gitattributes
+++ b/.gitattributes
@@ -5668,6 +5668,7 @@ utils/simulator/fastmm64.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=na
 utils/simulator/mm64.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/simulator/simbase.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/simulator/simlib.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+utils/svn2cl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/tply/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/tply/lexbase.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/tply/lexdfa.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
