--- a/.gitattributes
+++ b/.gitattributes
@@ -3127,6 +3127,7 @@ rtl/inc/mvecimp.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/objects.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/objpas.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/objpash.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/inc/pagemem.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/printer.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/printerh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/real2str.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
