+ more svn:ignore properties set
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@143 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,54 @@
 compiler/*.bak
 compiler/*.exe
+compiler/*.s
+compiler/alpha/*.bak
+compiler/alpha/*.exe
+compiler/alpha/*.s
+compiler/arm/*.bak
+compiler/arm/*.exe
+compiler/arm/*.s
+compiler/html/*.bak
+compiler/html/*.exe
+compiler/html/*.s
+compiler/html/i386/*.bak
+compiler/html/i386/*.exe
+compiler/html/i386/*.s
+compiler/html/powerpc/*.bak
+compiler/html/powerpc/*.exe
+compiler/html/powerpc/*.s
 compiler/i386/*.bak
+compiler/i386/*.exe
+compiler/i386/*.s
+compiler/ia64/*.bak
+compiler/ia64/*.exe
+compiler/ia64/*.s
+compiler/m68k/*.bak
+compiler/m68k/*.exe
+compiler/m68k/*.s
+compiler/mips/*.bak
+compiler/mips/*.exe
+compiler/mips/*.s
+compiler/msg/*.bak
+compiler/msg/*.exe
+compiler/msg/*.s
+compiler/powerpc/*.bak
+compiler/powerpc/*.exe
+compiler/powerpc/*.s
+compiler/sparc/*.bak
+compiler/sparc/*.exe
+compiler/sparc/*.s
+compiler/systems/*.bak
+compiler/systems/*.exe
+compiler/systems/*.s
+compiler/utils/*.bak
 compiler/utils/*.exe
+compiler/utils/*.s
+compiler/vis/*.bak
+compiler/vis/*.exe
+compiler/vis/*.s
 compiler/x86/*.bak
+compiler/x86/*.exe
+compiler/x86/*.s
+compiler/x86_64/*.bak
+compiler/x86_64/*.exe
+compiler/x86_64/*.s
