--- a/.gitattributes
+++ b/.gitattributes
@@ -2973,6 +2973,7 @@ rtl/bsd/x86_64/syscallh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nat
 rtl/darwin/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/darwin/console.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/darwin/errno.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/darwin/pmutext.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/darwin/powerpc/sig_cpu.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/darwin/powerpc/sighnd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/darwin/pthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3008,6 +3009,7 @@ rtl/freebsd/i386/bsyscall.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=n
 rtl/freebsd/i386/sighnd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/i386/x86.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/i386/x86h.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freebsd/pmutext.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/pthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/ptypes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/signal.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3282,6 +3284,7 @@ rtl/netbsd/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/netbsd/classes.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/netbsd/errno.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/netbsd/i386/sighnd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/netbsd/pmutext.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/netbsd/powerpc/sighnd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/netbsd/ptypes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/netbsd/signal.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3431,6 +3434,7 @@ rtl/openbsd/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/openbsd/classes.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/openbsd/errno.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/openbsd/i386/sighnd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/openbsd/pmutext.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/openbsd/ptypes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/openbsd/signal.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/openbsd/syscalls.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
