--- a/.gitattributes
+++ b/.gitattributes
@@ -787,6 +787,7 @@ fcl/os2/custapp.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/os2/eventlog.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/os2/ezcgi.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/os2/pipes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/os2/resolve.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/passrc/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/passrc/pastree.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/passrc/paswrite.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
