+ build unit added
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@286 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -2675,6 +2675,7 @@ packages/extra/uuid/testuid.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=
 packages/extra/uuid/uuid.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/winunits/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/winunits/activex.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/extra/winunits/buildjwa.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/winunits/commctrl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/winunits/comobj.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/winunits/examples/testver.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
