* windows rtl restructuring to share code between win32 and win64 * BeginThread can take a qword on 64 bit targets as stacksize
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@287 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -3672,6 +3672,12 @@ rtl/watcom/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/watcom/sysutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/watcom/varutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/watcom/watcom.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/sysdir.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/sysfile.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/sysheap.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/sysos.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/sysosh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/systhrd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/classes.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/crt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3686,19 +3692,12 @@ rtl/win32/objinc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/printer.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/signals.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/sockets.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/sysdir.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/sysfile.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/sysheap.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/sysos.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/sysosh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/systhrd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/sysutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/syswin32.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/tthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/varutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/video.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/win32.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/wincrt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/windows.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/winevent.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3717,6 +3716,9 @@ rtl/win32/wininc/unifun.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nat
 rtl/win32/winmouse.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/winsock.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/winsysut.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win64/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win64/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win64/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/x86_64/int64p.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/x86_64/math.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/x86_64/mathu.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
