--- a/.gitattributes
+++ b/.gitattributes
@@ -401,6 +401,7 @@ compiler/utils/fixlog.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/fixmsg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/fixnasm.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/fixtab.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/utils/fpc.cft svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/fpc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/fpccfg.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/fpcmkcfg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
